--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
+    "buildDB": "node src/database/build.js",
+    "lint": "eslint '*/**/*.js'",
+    "lint:fix": "eslint '*/**/*.js' --quiet --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +21,16 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.4",
+    "winston": "^3.15.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0"
   }
 }
