--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -23,8 +24,11 @@
     "express-joi-validation": "^5.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.3.0",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
