--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
