--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "buildDB": "node src/database/build.js",
     "lint": "eslint '*/**/*.js'",
     "lint:fix": "eslint '*/**/*.js' --quiet --fix",
@@ -30,7 +31,6 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.3.3"
   }
 }
